--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
-    <h1>HI I am</h1>
-    <h2>Iulia Neghina</h2>
+    <div class="hero">
+      <p>Hello, I am</p>
+      <h1>Iulia Neghina</h1>
+      <h2 class="mb-5">Keen on green lifestyle</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
