--- a/index.html
+++ b/index.html
@@ -32,17 +32,92 @@
   </head>
   <body>
     <div class="hero">
-      <p>Hello, I am</p>
+      <p class="mb-3">👋Hello, I am</p>
       <h1>Iulia Neghina</h1>
       <h2 class="mb-5">Keen on green lifestyle</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <p class="m-5 text-center">Dishes and desserts prepared lately</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluid rounded"
+            src="/images/raw-vegan-cakes.png"
+            alt=""
+          />
+        </div>
+        <div class="col">
+          <div class="description">
+            <h2 class="mb-5">Raw-vegan cakes</h2>
+            <p class="mb-5 text-black-50">
+              When baked cakes are usually made from flour, milk, eggs, sugar,
+              butter, raw desserts in generally and raw cakes specifically are
+              made mostly from nuts and seeds to replace flour and dairy, oils,
+              fruit, including avocado, sweeteners, thickeners and binders. Raw
+              vegan desserts are typically made with more nutritious ingredients
+              than those that tend to be found in regular desserts. They often
+              don't contain any processed ingredients, such as refined sugars,
+              which means you aren't taking in all of those unnecessary, empty
+              calories.
+            </p>
+            <a href="#" class="btn btn-branding-outline">See more</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col">
+          <div class="description">
+            <h2 class="mb-5">Plant-based sweet treats</h2>
+            <p class="mb-5 text-black-50">
+              Vegan desserts get a bad rap for many reasons. Too dry, dense, or
+              crumbly, or simply “too healthy” to qualify as dessert. But vegan
+              desserts can be so delicious and even indulgent when made right.
+              And vegan desserts don’t have to be complicated. From vegan
+              pudding to energy balls to classic chocolate chips muffins,
+              there’s an enormous variety of mouthwatering plant-based desserts
+              that’ll rock your world (whether you’re vegan or not).
+            </p>
+            <a href="#" class="btn btn-branding-outline">See more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluid rounded"
+            src="/images/vegan-desserts.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            class="img-fluid rounded"
+            src="/images/vegan-dishes.png"
+            alt=""
+          />
+        </div>
+        <div class="col">
+          <div class="description">
+            <h2 class="mb-5">Vegan dishes</h2>
+            <p class="mb-5 text-black-50">
+              Whether you’re trying to eat less meat, pack your meals with the
+              healthiest vegetables, or go completely meat and dairy-free, the
+              idea of making vegan recipes can be seriously daunting. Vegan
+              cuisine often gets a bad rep, with some believing it's
+              automatically boring and bland. But the truth is that vegan meals
+              usually include fragrant spices, delicious sauces and all kinds of
+              healthy substitutes to create satisfying, complete meals. . Always
+              remember, vegan food never has to be boring or bland! And
+              remember, if it tastes delicious, no one will ever miss the meat!
+              I promise!
+            </p>
+            <a href="#" class="btn btn-branding-outline">See more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
