--- a/about.html
+++ b/about.html
@@ -28,16 +28,37 @@
       href="https://fonts.googleapis.com/css2?family=Lemon&family=Lemonada:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/99dbec5180.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <header class="d-flex justify-content-between">
+        <div class="d-none d-lg-block">
+          <div>Eat Green</div>
+          <div>🥑 Feel Good</div>
+        </div>
+        <div class="mt-3 d-block d-lg-none">
+          <div>🥑</div>
+        </div>
+        <ul class="d-flex mt-3">
+          <li class="me-3"><a href="/">Home</a></li>
+          <li class="me-3"><a class="active-link" href="/²">About</a></li>
+          <li class="me-3"><a href="/²">Recipes</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </header>
+    </div>
     <div class="container about-me">
       <div class="row">
         <div class="col-lg-6">
           <div class="intro">
             <h1 class="mb-5">Hi, I am Iulia Neghina</h1>
             <h2 class="mb-5">Keen on green lifestyle</h2>
-            <p class=" mb-5 text-black-50">
+            <p class="mb-5 text-black-50">
               I love to spend time in the nature, I like the sea, but I love the
               mountains. I grew up in the countryside and since I was young I
               knew how healthy food tastes and looks like. I enjoy discovering
@@ -52,6 +73,34 @@
           <img src="/images/iulia.jpg" class="img-fluid rounded-5" alt="" />
         </div>
       </div>
+    </div>
+    <div class="container">
+      <footer>
+        <div class="work-inquiry d-flex justify-content-between mb-5">
+          <div>
+            <h1>Work Inquiry</h1>
+            <h4>Let's work together</h4>
+          </div>
+          <div class="align-self-center">
+            <a class="btn btn-branding" href="">Contact me</a>
+          </div>
+        </div>
+        <div class="text-center mb-3">
+          <a class="contact-email" href="mailto:iulia.madalina@gmail.com"
+            >iulia.madalina@gmail.com</a
+          >
+        </div>
+        <div class="icons d-flex justify-content-center mb-5">
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+        </div>
+        <p class="text-center mb-5">
+          This website was coded by Iulia Neghina and it's
+          <a href="#">open-sourced</a>on Github and hosted on
+          <a href="#">Netlify</a>.
+        </p>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
