--- a/index.html
+++ b/index.html
@@ -28,9 +28,30 @@
       href="https://fonts.googleapis.com/css2?family=Lemon&family=Lemonada:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/99dbec5180.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
+    <div class="container">
+      <header class="d-flex justify-content-between">
+        <div class="d-none d-lg-block">
+          <div>Eat Green</div>
+          <div>🥑 Feel Good</div>
+        </div>
+        <div class="mt-3 d-block d-lg-none">
+          <div>🥑</div>
+        </div>
+        <ul class="d-flex mt-3">
+          <li class="me-3"><a class="active-link" href="/">Home</a></li>
+          <li class="me-3"><a href="/about.html">About</a></li>
+          <li class="me-3"><a href="/recipes.html">Recipes</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </header>
+    </div>
     <div class="hero">
       <p class="mb-3">👋Hello, I am</p>
       <h1>Iulia Neghina</h1>
@@ -121,6 +142,28 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="container">
+      <footer>
+        <div class="work-inquiry d-flex justify-content-between mb-5">
+          <div>
+            <h1>Work Inquiry</h1>
+            <h4>Let's work together</h4>
+          </div>
+          <div class="align-self-center">
+            <a class="btn btn-branding" href="">Contact me</a>
+          </div>
+        </div>
+        <div class="text-center mb-3">
+          <a class="contact-email" href="mailto:iulia.madalina@gmail.com">iulia.madalina@gmail.com</a>
+        </div>
+        <div class="icons d-flex justify-content-center mb-5">
+        <a href="#"><i class="fa-brands fa-github"></i></a> 
+        <a href="#"><i class="fa-brands fa-instagram"></i></a> 
+        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a> 
+        </div>
+        <p class="text-center mb-5">This website was coded by Iulia Neghina and it's <a href="#">open-sourced</a>on Github and hosted on <a href="#">Netlify</a>.</p>
+      </footer>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
