--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <meta name="description" content="Let's get acquainted!">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -42,10 +43,10 @@
           <div>🥑</div>
         </div>
         <ul class="d-flex mt-3">
-          <li class="me-3"> <a href="/">Home</a></li>
-          <li class="me-3"> <a href="/about.html">About</a></li>
-          <li class="me-3"> <a href="/recipes.html">Recipes</a></li>
-          <li> <a class="active-link" href="/contact.html">Contact</a></li>
+          <li class="me-3"> <a href="/" title="Homepage">Home</a></li>
+          <li class="me-3"> <a href="/about.html" title="About me">About</a></li>
+          <li class="me-3"> <a href="/recipes.html" title="Recipes">Recipes</a></li>
+          <li> <a class="active-link" href="/contact.html" title="Contact me">Contact</a></li>
         </ul>
       </header>
     </div>
@@ -55,14 +56,14 @@
         <p>
           Email
           <div class="mt-2 mb-4">
-            <a href="mailto:iulia.madalina92@gmail.com"
-              >iulia.madalina92@gmail.com</a
+            <a href="mailto:iulia.madalina.neghina@gmail.com"
+              >iulia.madalina.neghina@gmail.com</a
             >
           </div>
         </p>
         <p>
           Phone
-          <div class="mt-2 mb-4"><a href="#">0032 484 82 30 80</a></div>
+          <div class="mt-2 mb-4"><a href="#">+32 (0)484 82 30 80</a></div>
         </p>
         <p>
           Instagram
@@ -88,14 +89,22 @@
           </div>
         </div>
         <div class="text-center mb-3">
-          <a class="contact-email" href="mailto:iulia.madalina@gmail.com">iulia.madalina@gmail.com</a>
+          <a class="contact-email" href="mailto:iulia.madalina@gmail.com">iulia.madalina.neghina@gmail.com</a>
         </div>
         <div class="icons d-flex justify-content-center mb-5">
-        <a href="#"><i class="fa-brands fa-github"></i></a> 
-        <a href="#"><i class="fa-brands fa-instagram"></i></a> 
-        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a> 
+        <a href="https://github.com/iulianeghina?tab=repositories"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/iulia.madalina92/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
-        <p class="text-center mb-5">This website was coded by Iulia Neghina and it's <a href="#">open-sourced</a>on Github and hosted on <a href="#">Netlify</a>.</p>
+        <p class="text-center mb-5">This website was coded by Iulia Neghina and it's
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            >open-sourced</a
+          > on Github and hosted on
+          <a href="https://taupe-sorbet-0f98d3.netlify.app/">Netlify</a>.</p>
       </footer>
     </div>
     <script
