--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About me - INE</title>
+    <meta
+      name="description"
+      content="I am nature lover and I enjoy discovering new things."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,10 +49,10 @@
           <div>🥑</div>
         </div>
         <ul class="d-flex mt-3">
-          <li class="me-3"><a href="/">Home</a></li>
-          <li class="me-3"><a class="active-link" href="/²">About</a></li>
-          <li class="me-3"><a href="/²">Recipes</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="me-3"><a href="/" title="Home">Home</a></li>
+          <li class="me-3"><a class="active-link" title="About me" href="/²">About</a></li>
+          <li class="me-3"><a href="/recipes.html" title="Recips">Recipes</a></li>
+          <li><a href="/contact.html" title="Contact">Contact</a></li>
         </ul>
       </header>
     </div>
@@ -65,12 +69,18 @@
               new tastes and plant-based dishes and desserts.
             </p>
             <div>
-              <a href="#" class="btn btn-branding"> Go to -> 🎂🍰🍪</a>
+              <a href="/recipes.html" class="btn btn-branding">
+                Go to recipes</a
+              >
             </div>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="/images/iulia.jpg" class="img-fluid rounded-5" alt="" />
+          <img
+            src="/images/iulia.jpg"
+            class="img-fluid rounded-5"
+            alt="picture of me"
+          />
         </div>
       </div>
     </div>
@@ -82,23 +92,29 @@
             <h4>Let's work together</h4>
           </div>
           <div class="align-self-center">
-            <a class="btn btn-branding" href="">Contact me</a>
+            <a class="btn btn-branding" href="/contact.html">Contact me</a>
           </div>
         </div>
         <div class="text-center mb-3">
           <a class="contact-email" href="mailto:iulia.madalina@gmail.com"
-            >iulia.madalina@gmail.com</a
+            >iulia.madalina.neghina@gmail.com</a
           >
         </div>
         <div class="icons d-flex justify-content-center mb-5">
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/iulia.madalina92/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
         <p class="text-center mb-5">
           This website was coded by Iulia Neghina and it's
-          <a href="#">open-sourced</a>on Github and hosted on
-          <a href="#">Netlify</a>.
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            >open-sourced</a
+          > on Github and hosted on
+          <a href="https://taupe-sorbet-0f98d3.netlify.app/">Netlify</a>.
         </p>
       </footer>
     </div>
