--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🥑 Eat green, feel good</title>
+    <meta
+      name="description"
+      content="A green lifestyle is the equivalent of wellbeing."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,10 +49,16 @@
           <div>🥑</div>
         </div>
         <ul class="d-flex mt-3">
-          <li class="me-3"><a class="active-link" href="/">Home</a></li>
-          <li class="me-3"><a href="/about.html">About</a></li>
-          <li class="me-3"><a href="/recipes.html">Recipes</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="me-3">
+            <a class="active-link" title="Homepage" href="/">Home</a>
+          </li>
+          <li class="me-3">
+            <a href="/about.html" title="About Iulia">About</a>
+          </li>
+          <li class="me-3">
+            <a href="/recipes.html" title="My last recipes">Recipes</a>
+          </li>
+          <li><a href="/contact.html" title="Contact me">Contact</a></li>
         </ul>
       </header>
     </div>
@@ -57,7 +67,9 @@
       <h1>Iulia Neghina</h1>
       <h2 class="mb-5">Keen on green lifestyle</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html#page-content" class="btn btn-branding"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="m-5 text-center">Dishes and desserts prepared lately</p>
@@ -68,7 +80,7 @@
             <img
               class="img-fluid rounded"
               src="/images/raw-vegan-cakes.png"
-              alt=""
+              alt="Raw-vegan cakes"
             />
           </div>
           <div class="col">
@@ -85,7 +97,9 @@
                 ingredients, such as refined sugars, which means you aren't
                 taking in all of those unnecessary, empty calories.
               </p>
-              <a href="#" class="btn btn-branding-outline">See more</a>
+              <a href="/recipes.html" class="btn btn-branding-outline"
+                >See more</a
+              >
             </div>
           </div>
         </div>
@@ -103,14 +117,16 @@
                 plant-based desserts that’ll rock your world (whether you’re
                 vegan or not).
               </p>
-              <a href="#" class="btn btn-branding-outline">See more</a>
+              <a href="/recipes.html" class="btn btn-branding-outline"
+                >See more</a
+              >
             </div>
           </div>
           <div class="col d-none d-lg-block">
             <img
               class="img-fluid rounded"
               src="/images/vegan-desserts.png"
-              alt=""
+              alt="Vegan desserts"
             />
           </div>
         </div>
@@ -119,7 +135,7 @@
             <img
               class="img-fluid rounded"
               src="/images/vegan-dishes.png"
-              alt=""
+              alt="Vegan dishes"
             />
           </div>
           <div class="col">
@@ -137,7 +153,9 @@
                 bland! And remember, if it tastes delicious, no one will ever
                 miss the meat! I promise!
               </p>
-              <a href="#" class="btn btn-branding-outline">See more</a>
+              <a href="/recipes.html" class="btn btn-branding-outline"
+                >See more</a
+              >
             </div>
           </div>
         </div>
@@ -151,18 +169,30 @@
             <h4>Let's work together</h4>
           </div>
           <div class="align-self-center">
-            <a class="btn btn-branding" href="">Contact me</a>
+            <a class="btn btn-branding" href="/contact.html">Contact me</a>
           </div>
         </div>
         <div class="text-center mb-3">
-          <a class="contact-email" href="mailto:iulia.madalina@gmail.com">iulia.madalina@gmail.com</a>
+          <a class="contact-email" href="mailto:iulia.madalina@gmail.com"
+            >iulia.madalina.neghina@gmail.com</a
+          >
         </div>
         <div class="icons d-flex justify-content-center mb-5">
-        <a href="#"><i class="fa-brands fa-github"></i></a> 
-        <a href="#"><i class="fa-brands fa-instagram"></i></a> 
-        <a href="#"><i class="fa-brands fa-linkedin-in"></i></a> 
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/iulia.madalina92/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
-        <p class="text-center mb-5">This website was coded by Iulia Neghina and it's <a href="#">open-sourced</a>on Github and hosted on <a href="#">Netlify</a>.</p>
+        <p class="text-center mb-5">
+          This website was coded by Iulia Neghina and it's
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            >open-sourced</a
+          > on Github and hosted on
+          <a href="https://taupe-sorbet-0f98d3.netlify.app/">Netlify</a>.
+        </p>
       </footer>
     </div>
     <script
