--- a/recipes.html
+++ b/recipes.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <meta name="description" content="My last plant-based recipes." />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -45,10 +46,14 @@
           <div>🥑</div>
         </div>
         <ul class="d-flex mt-3">
-          <li class="me-3"><a href="/">Home</a></li>
-          <li class="me-3"><a href="/about.html">About</a></li>
-          <li class="me-3"><a class="active-link" href="/recipes.html">Recipes</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="me-3"><a href="/" title="Homepage">Home</a></li>
+          <li class="me-3"><a href="/about.html" title="About me">About</a></li>
+          <li class="me-3">
+            <a class="active-link" href="/recipes.html" title="Recipes"
+              >Recipes</a
+            >
+          </li>
+          <li><a href="/contact.html" title="Contact me">Contact</a></li>
         </ul>
       </header>
     </div>
@@ -67,14 +72,14 @@
                   <img
                     src="/images/bananna&cinnamon-cake-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Bannanas&cinnamon cake"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/bananna&cinnamon-cake-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Bannanas&cinnamon cake"
                   />
                 </div>
               </div>
@@ -116,14 +121,14 @@
                   <img
                     src="/coconut-cake/coconut-cake-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Cocnut cake"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/coconut-cake/coconut-cake-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Coconut cake"
                   />
                 </div>
               </div>
@@ -167,21 +172,21 @@
                   <img
                     src="/images/chocolate-chips-muffins-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Chocolate chips cake"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/chocolate-chips-muffins-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Chocolate chips cake"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/chocolate-chips-muffins-3.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Chocolate chips cake"
                   />
                 </div>
               </div>
@@ -223,21 +228,21 @@
                   <img
                     src="/images/ennergy-balls-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Ennergy balls"
                   />
                 </div>
                 <div class="carousel-item active">
                   <img
                     src="/images/ennergy-balls-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Ennergy balls"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/ennergy-balls-3.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Ennergy balls"
                   />
                 </div>
               </div>
@@ -281,21 +286,21 @@
                   <img
                     src="/images/autumn-tart-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Autumn tart"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/autumn-tart-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Autumn tart"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/autumn-tart-3.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Autumn tart"
                   />
                 </div>
               </div>
@@ -337,21 +342,21 @@
                   <img
                     src="/images/red-humus-1.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Red humus"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/red-humus-2.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Red humus"
                   />
                 </div>
                 <div class="carousel-item">
                   <img
                     src="/images/red-humus-3.png"
                     class="d-block w-100"
-                    alt="..."
+                    alt="Red humus"
                   />
                 </div>
               </div>
@@ -398,18 +403,24 @@
         </div>
         <div class="text-center mb-3">
           <a class="contact-email" href="mailto:iulia.madalina@gmail.com"
-            >iulia.madalina@gmail.com</a
+            >iulia.madalina.neghina@gmail.com</a
           >
         </div>
         <div class="icons d-flex justify-content-center mb-5">
-          <a href="#"><i class="fa-brands fa-github"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.instagram.com/iulia.madalina92/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
           <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
         </div>
         <p class="text-center mb-5">
           This website was coded by Iulia Neghina and it's
-          <a href="#">open-sourced</a>on Github and hosted on
-          <a href="#">Netlify</a>.
+          <a href="https://github.com/iulianeghina?tab=repositories"
+            >open-sourced</a
+          > on Github and hosted on
+          <a href="https://taupe-sorbet-0f98d3.netlify.app/">Netlify</a>.
         </p>
       </footer>
     </div>
