Added contact link

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="row mb-5">
           <div class="col">
             <div class="description">
-              <h2 class="mb-5">Plant-based sweet treats</h2>
+              <h2 class="mb-5">Dairy & sugar free sweet treats</h2>
               <p class="mb-5 text-black-50">
                 Vegan desserts get a bad rap for many reasons. Too dry, dense,
                 or crumbly, or simply “too healthy” to qualify as dessert. But
