--- a/recipes.html
+++ b/recipes.html
@@ -398,7 +398,9 @@
             <h4>Let's work together</h4>
           </div>
           <div class="align-self-center">
-            <a class="btn btn-branding" href="">Contact me</a>
+            <a class="btn btn-branding" href="/contact.html#page-content"
+              >Contact me</a
+            >
           </div>
         </div>
         <div class="text-center mb-3">
@@ -419,7 +421,8 @@
           This website was coded by Iulia Neghina and it's
           <a href="https://github.com/iulianeghina?tab=repositories"
             >open-sourced</a
-          > on Github and hosted on
+          >
+          on Github and hosted on
           <a href="https://taupe-sorbet-0f98d3.netlify.app/">Netlify</a>.
         </p>
       </footer>
